# ffdecmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ffdecmcp/: __init__.py  __main__.py  config.py  ffdec.py  server.py  utils.py
tests/: __init__.py  test_ffdec.py  test_tools.py
